@@ -6,8 +6,8 @@ import io.jsonwebtoken.Jwts;
 import io.jsonwebtoken.UnsupportedJwtException;
 import io.jsonwebtoken.security.Keys;
 import java.util.List;
-import java.util.stream.Collectors;
 import javax.crypto.SecretKey;
+import lombok.RequiredArgsConstructor;
 import org.springframework.security.authentication.AuthenticationProvider;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
 import org.springframework.security.core.Authentication;
@@ -19,17 +19,9 @@ import org.springframework.security.core.authority.SimpleGrantedAuthority;
  * @author Yurii Koval
  * @version 1.1
  */
+@RequiredArgsConstructor
 public class JwtAuthenticationProvider implements AuthenticationProvider {
     private final JwtTool jwtTool;
-
-    /**
-     * Constructor.
-     * 
-     * @param jwtTool {@link JwtTool}
-     */
-    public JwtAuthenticationProvider(JwtTool jwtTool) {
-        this.jwtTool = jwtTool;
-    }
 
     /**
      * Method that provide authentication.
@@ -64,7 +56,7 @@ public class JwtAuthenticationProvider implements AuthenticationProvider {
         return new UsernamePasswordAuthenticationToken(
             email,
             "",
-            authorities.stream().map(SimpleGrantedAuthority::new).collect(Collectors.toList()));
+            authorities.stream().map(SimpleGrantedAuthority::new).toList());
     }
 
     /**
