@@ -6,13 +6,12 @@ import greencity.entity.Authority;
 import greencity.entity.Position;
 import greencity.exception.exceptions.NotFoundException;
 import greencity.repository.UserRepo;
-import java.util.stream.Collectors;
-import lombok.AllArgsConstructor;
+import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 @Service
-@AllArgsConstructor
+@RequiredArgsConstructor
 @Transactional(readOnly = true)
 public class PositionServiceImpl implements PositionService {
     private final UserRepo userRepo;
@@ -22,10 +21,10 @@ public class PositionServiceImpl implements PositionService {
         var user = userRepo.findByEmail(email)
             .orElseThrow(() -> new NotFoundException(ErrorMessage.USER_NOT_FOUND_BY_EMAIL));
         return PositionAuthoritiesDto.builder()
-            .positionId(user.getPositions().stream().map(Position::getId).collect(Collectors.toList()))
+            .positionId(user.getPositions().stream().map(Position::getId).toList())
             .authorities(user.getAuthorities().stream()
                 .map(Authority::getName)
-                .collect(Collectors.toList()))
+                .toList())
             .build();
     }
 }
